# bridge-tcs

./: .gitignore  CMakeLists.txt  README.md
include/bridge-tcs/core/: Application.hpp  Card.hpp  Rubber.hpp
src/: CMakeLists.txt  bridge-tcs-console.cpp
src/core/: Application.cpp  Rubber.cpp
src/ui/console/: Application.cpp  Application.hpp  Rubber.cpp  Rubber.hpp
